# OraclePageIndex

./: .env.example  .gitignore  README.md  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  run.py  setup_schema.sql
api/: server.py
cookbook/: README.md  graph_RAG_simple.ipynb  graph_retrieval.ipynb  oracle_graph_quickstart.ipynb  vision_RAG_oracle.ipynb
docs/: e2e-report.md
docs/slides/: presentation.html
oracle_pageindex/: __init__.py  cli.py  config.yaml  db.py  enricher.py  entity_extractor.py  entity_resolver.py  graph.py  indexer.py  llm.py  models.py  parser.py  query.py  utils.py
scripts/: baseline_vector_rag.py  e2e_graph_validation.py  e2e_query_pipeline.py
tests/: test_api.py  test_config.py  test_db.py  test_enricher.py  test_entity_extractor.py  test_entity_resolver.py  test_graph.py  test_graph_integration.py  test_indexer.py  test_intent.py  test_llm.py  test_models.py  test_parser.py  test_query.py  test_schema.py  test_sessions.py  test_temporal.py
viz/: graph.js  index.html  style.css
