[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oracle-pageindex"
version = "0.2.0"
description = "Oracle AI Database powered document intelligence with Property Graphs"
requires-python = ">=3.11"
dependencies = [
    "oracledb>=2.5.0",
    "pymupdf>=1.26.0",
    "PyPDF2>=3.0.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.11.0",
    "pyyaml>=6.0.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
oracle-pageindex = "oracle_pageindex.cli:main"

[tool.setuptools.packages.find]
include = ["oracle_pageindex*", "api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
